--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span>или</span>
                 </div>
                 
-                <button id="demo-mode" class="auth-btn demo-btn">
+                <button id="demo-mode-btn" class="auth-btn demo-btn">
                     <div class="btn-icon">🎮</div>
                     <div class="btn-text">
                         <span class="btn-title">Попробовать демо-режим</span>
@@ -113,7 +113,7 @@
                             <p>Для участия в PVP играх необходимо подключить TON кошелёк</p>
                             <div class="connect-buttons">
                                 <div id="pvp-ton-connect-button" class="ton-connect-container"></div>
-                                <button class="btn-demo" onclick="app.enterDemoMode()">Попробовать демо</button>
+                                <button class="btn-demo" id="pvp-demo-btn">Попробовать демо</button>
                             </div>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                             <div class="wheel-pointer"></div>
                         </div>
                         <div class="game-controls">
-                            <button class="btn-spin" id="spin-pvp">
+                            <button class="btn-spin" id="spin-pvp-btn">
                                 <span class="btn-icon">🎯</span>
                                 <span class="btn-text">Крутить колесо (10 TON)</span>
                             </button>
@@ -171,53 +171,11 @@
                                     <p class="ticket-balance">Ваши билеты: <span id="ticket-count">0</span></p>
                                 </div>
                             </div>
-                            <button class="btn-spin fortune" id="spin-fortune">
+                            <button class="btn-spin fortune" id="spin-fortune-btn">
                                 <span class="btn-icon">🎡</span>
                                 <span class="btn-text">Крутить колесо</span>
                             </button>
                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Инвентарь -->
-            <div id="inventory-page" class="page">
-                <div class="page-header">
-                    <h2>🎁 Инвентарь</h2>
-                    <p class="page-subtitle">Ваши выигранные подарки</p>
-                </div>
-                <div class="page-content">
-                    <div class="inventory-stats">
-                        <div class="inventory-stat">
-                            <span class="stat-number" id="total-gifts">0</span>
-                            <span class="stat-label">Всего подарков</span>
-                        </div>
-                        <div class="inventory-stat">
-                            <span class="stat-number" id="sellable-gifts">0</span>
-                            <span class="stat-label">Можно продать</span>
-                        </div>
-                    </div>
-                    <div class="inventory-grid" id="inventory-grid">
-                        <!-- Подарки будут генерироваться динамически -->
-                    </div>
-                </div>
-            </div>
-
-            <!-- Магазин -->
-            <div id="shop-page" class="page">
-                <div class="page-header">
-                    <h2>🛒 Магазин</h2>
-                    <p class="page-subtitle">Подарки от других игроков</p>
-                </div>
-                <div class="page-content">
-                    <div class="shop-filters">
-                        <button class="filter-btn active">Все</button>
-                        <button class="filter-btn">Дешёвые</button>
-                        <button class="filter-btn">Редкие</button>
-                        <button class="filter-btn">Новые</button>
-                    </div>
-                    <div class="shop-grid" id="shop-grid">
-                        <!-- Товары будут генерироваться динамически -->
                     </div>
                 </div>
             </div>
@@ -259,7 +217,7 @@
 
                         <div class="profile-actions">
                             <div id="profile-ton-connect-button" class="ton-connect-container"></div>
-                            <button class="btn-secondary" onclick="app.enterDemoMode()">
+                            <button class="btn-secondary" id="profile-demo-btn">
                                 Перейти в демо-режим
                             </button>
                         </div>
@@ -278,14 +236,6 @@
                 <span class="nav-icon">🎡</span>
                 <span class="nav-label">Колесо</span>
             </button>
-            <button class="nav-btn" data-page="inventory-page">
-                <span class="nav-icon">🎁</span>
-                <span class="nav-label">Инвентарь</span>
-            </button>
-            <button class="nav-btn" data-page="shop-page">
-                <span class="nav-icon">🛒</span>
-                <span class="nav-label">Магазин</span>
-            </button>
             <button class="nav-btn" data-page="profile-page">
                 <span class="nav-icon">👤</span>
                 <span class="nav-label">Профиль</span>
@@ -297,13 +247,13 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h3>🔗 Подключение кошелька</h3>
-                    <span class="close">&times;</span>
+                    <span class="close" id="close-wallet-modal">&times;</span>
                 </div>
                 <div class="modal-body">
                     <p>Выберите способ подключения:</p>
                     <div class="wallet-options">
                         <div id="modal-ton-connect-button" class="ton-connect-container"></div>
-                        <button class="wallet-option demo" onclick="app.enterDemoMode()">
+                        <button class="wallet-option demo" id="modal-demo-btn">
                             <div class="wallet-icon">🎮</div>
                             <div class="wallet-info">
                                 <span class="wallet-name">Демо-режим</span>
@@ -314,26 +264,13 @@
                 </div>
             </div>
         </div>
-
-        <!-- Модальное окно для транзакций -->
-        <div id="transaction-modal" class="modal hidden">
-            <!-- ... существующий код ... -->
-        </div>
-
-        <!-- Модальное окно для подарка -->
-        <div id="gift-modal" class="modal hidden">
-            <!-- ... существующий код ... -->
-        </div>
     </div>
 
-    <script src="js/ton-connect.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/ton-connect.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/wallet.js"></script>
     <script src="js/pvp.js"></script>
     <script src="js/wheel.js"></script>
-    <script src="js/inventory.js"></script>
-    <script src="js/shop.js"></script>
-    <script src="js/profile.js"></script>
 </body>
 </html>
